[package]
name = "paimon"
version = "1.5.0"
edition = "2021"
description = "Paimon - Your sneaky code companion CLI"

[[bin]]
name = "paimon"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
include_dir = { version = "0.7", features = ["glob"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
